--- a/index.html
+++ b/index.html
@@ -14,29 +14,32 @@
 
 <body>
   <main>
-    Your Result
-    76
-    of 100
+    <div>
+      Your Result
+      76
+      of 100
 
-    Great
-    You scored higher than 65% of the people who have taken these tests.
+      Great
+      You scored higher than 65% of the people who have taken these tests.
+    </div>
+    <div>
+      Summary
 
-    Summary
+      Reaction
+      80 / 100
 
-    Reaction
-    80 / 100
+      Memory
+      92 / 100
 
-    Memory
-    92 / 100
+      Verbal
+      61 / 100
 
-    Verbal
-    61 / 100
-
-    Visual
-    72 / 100
-
-    Continue
-
+      Visual
+      72 / 100
+      <form action="">
+        <button>Continue</button>
+      </form>
+    </div>
   </main>
   <footer>
     <div class="attribution">
