--- a/index.html
+++ b/index.html
@@ -15,39 +15,55 @@
 <body>
   <main>
     <div>
-      Your Result
-      76
-      of 100
-
-      Great
-      You scored higher than 65% of the people who have taken these tests.
+      <div>
+        Your Result
+      </div>
+      <div>
+        76
+        of 100
+      </div>
+      <div>
+        Great
+        You scored higher than 65% of the people who have taken these tests.
+      </div>
     </div>
     <div>
-      Summary
-
-      Reaction
-      80 / 100
-
-      Memory
-      92 / 100
-
-      Verbal
-      61 / 100
-
-      Visual
-      72 / 100
-      <form action="">
-        <button>Continue</button>
-      </form>
+      <div>
+        Summary
+      </div>
+      <div>
+        Reaction
+        80 / 100
+      </div>
+      <div>
+        Memory
+        92 / 100
+      </div>
+      <div>
+        Verbal
+        61 / 100
+      </div>
+      <div>
+        Visual
+        72 / 100
+      </div>
+      <div>
+        <form action="">
+          <button>Continue</button>
+        </form>
+      </div>
     </div>
   </main>
+
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
     </div>
   </footer>
+
 </body>
+
 <script src="./app.js"></script>
 
 </html>
