add flex container to total card

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <main>
-    <div>
+    <div class="total">
       <div>
         Your Result
       </div>
@@ -24,10 +24,12 @@
       </div>
       <div>
         Great
+      </div>
+      <div>
         You scored higher than 65% of the people who have taken these tests.
       </div>
     </div>
-    <div>
+    <div class="itemized summary">
       <div>
         Summary
       </div>
