set score bg size, add margin

--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
       <div>
         Your Result
       </div>
-      <div>
-        76
-        of 100
+      <div class="score">
+        <div>
+          76
+        </div>
+        <div>
+          of 100
+        </div>
       </div>
       <div>
         Great
