--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         You scored higher than 65% of the people who have taken these tests.
       </div>
     </div>
-    <div class="itemized summary">
+    <div class="itemizedSummary total">
       <div>
         Summary
       </div>
