--- a/index.html
+++ b/index.html
@@ -37,21 +37,37 @@
       <div>
         Summary
       </div>
-      <div>
-        Reaction
-        80 / 100
+      <div class="taskScore">
+        <div>
+          Reaction
+        </div>
+        <div>
+          80 / 100
+        </div>
       </div>
-      <div>
-        Memory
-        92 / 100
+      <div class="taskScore">
+        <div>
+          Memory
+        </div>
+        <div>
+          92 / 100
+        </div>
       </div>
-      <div>
-        Verbal
-        61 / 100
+      <div class="taskScore">
+        <div>
+          Verbal
+        </div>
+        <div>
+          61 / 100
+        </div>
       </div>
-      <div>
-        Visual
-        72 / 100
+      <div class="taskScore">
+        <div>
+          Visual
+        </div>
+        <div>
+          72 / 100
+        </div>
       </div>
       <div>
         <form action="">
