add icons into task rows

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         Summary
       </div>
       <div class="taskScore">
+        <img src="./assets/images/icon-reaction.svg" alt="Lightening icon">
         <div>
           Reaction
         </div>
@@ -46,6 +47,7 @@
         </div>
       </div>
       <div class="taskScore">
+        <img src="./assets/images/icon-memory.svg" alt="Brain icon">
         <div>
           Memory
         </div>
@@ -54,6 +56,7 @@
         </div>
       </div>
       <div class="taskScore">
+        <img src="./assets/images/icon-verbal.svg" alt="Chat bubble icon">
         <div>
           Verbal
         </div>
@@ -62,6 +65,7 @@
         </div>
       </div>
       <div class="taskScore">
+        <img src="./assets/images/icon-visual.svg" alt="Eye icon">
         <div>
           Visual
         </div>
