size continue button, style border

--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@
           72 / 100
         </div>
       </div>
-      <div>
-        <form action="">
-          <button>Continue</button>
-        </form>
-      </div>
+      <form action="none" class="maxWidth">
+        <button>Continue</button>
+      </form>
     </div>
   </main>
 
