add margin and flex utility classes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <main>
-    <div class="total">
+    <div class="total flexColumn marginTop">
       <div>
         Your Result
       </div>
@@ -34,7 +34,7 @@
         You scored higher than 65% of the people who have taken these tests.
       </div>
     </div>
-    <div class="itemizedSummary total">
+    <div class="itemizedSummary flexColumn marginTop">
       <div>
         Summary
       </div>
