add color to background and text of total card, touch up element sizing

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div>
         Your Result
       </div>
-      <div class="score">
+      <div class="score flexColumn">
         <div>
           76
         </div>
