add background and title color of task rows.
Adjust padding and font-size of task rows

--- a/index.html
+++ b/index.html
@@ -38,36 +38,36 @@
       <div>
         Summary
       </div>
-      <div class="taskScore">
+      <div class="taskScore reactionBackground">
         <img src="./assets/images/icon-reaction.svg" alt="Lightening icon">
-        <div>
+        <div class="reactionColor">
           Reaction
         </div>
         <div>
           80 / 100
         </div>
       </div>
-      <div class="taskScore">
+      <div class="taskScore memoryBackground">
         <img src="./assets/images/icon-memory.svg" alt="Brain icon">
-        <div>
+        <div class="memoryColor">
           Memory
         </div>
         <div>
           92 / 100
         </div>
       </div>
-      <div class="taskScore">
+      <div class="taskScore verbalBackground">
         <img src="./assets/images/icon-verbal.svg" alt="Chat bubble icon">
-        <div>
+        <div class="verbalColor">
           Verbal
         </div>
         <div>
           61 / 100
         </div>
       </div>
-      <div class="taskScore">
+      <div class="taskScore visualBackground">
         <img src="./assets/images/icon-visual.svg" alt="Eye icon">
-        <div>
+        <div class="visualColor">
           Visual
         </div>
         <div>
