adjust font weight and opacity of last div in task rows

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
         <div>
           76
         </div>
-        <div>
-          of 100
-        </div>
+        <div> of 100 </div>
       </div>
       <div>
         Great
@@ -44,7 +42,10 @@
           Reaction
         </div>
         <div>
-          80 / 100
+          80
+          <span>
+            / 100
+          </span>
         </div>
       </div>
       <div class="taskScore memoryBackground">
@@ -53,7 +54,10 @@
           Memory
         </div>
         <div>
-          92 / 100
+          92
+          <span>
+            / 100
+          </span>
         </div>
       </div>
       <div class="taskScore verbalBackground">
@@ -62,7 +66,10 @@
           Verbal
         </div>
         <div>
-          61 / 100
+          61
+          <span>
+            / 100
+          </span>
         </div>
       </div>
       <div class="taskScore visualBackground">
@@ -71,7 +78,10 @@
           Visual
         </div>
         <div>
-          72 / 100
+          72
+          <span>
+            / 100
+          </span>
         </div>
       </div>
       <form action="none" class="maxWidth">
