Updated bottom card element proportions
Add color and weight to h2, create component for margin space between task rows,
change btn color to pale blue and convert radius unit to rem.

Appears task rows require border at corners.

--- a/index.html
+++ b/index.html
@@ -36,52 +36,54 @@
       <div>
         Summary
       </div>
-      <div class="taskScore reactionBackground">
-        <img src="./assets/images/icon-reaction.svg" alt="Lightening icon">
-        <div class="reactionColor">
-          Reaction
+      <div class="maxWidth">
+        <div class="taskScore reactionBackground">
+          <img src="./assets/images/icon-reaction.svg" alt="Lightening icon">
+          <div class="reactionColor">
+            Reaction
+          </div>
+          <div>
+            80
+            <span>
+              / 100
+            </span>
+          </div>
         </div>
-        <div>
-          80
-          <span>
-            / 100
-          </span>
+        <div class="taskScore memoryBackground">
+          <img src="./assets/images/icon-memory.svg" alt="Brain icon">
+          <div class="memoryColor">
+            Memory
+          </div>
+          <div>
+            92
+            <span>
+              / 100
+            </span>
+          </div>
         </div>
-      </div>
-      <div class="taskScore memoryBackground">
-        <img src="./assets/images/icon-memory.svg" alt="Brain icon">
-        <div class="memoryColor">
-          Memory
+        <div class="taskScore verbalBackground">
+          <img src="./assets/images/icon-verbal.svg" alt="Chat bubble icon">
+          <div class="verbalColor">
+            Verbal
+          </div>
+          <div>
+            61
+            <span>
+              / 100
+            </span>
+          </div>
         </div>
-        <div>
-          92
-          <span>
-            / 100
-          </span>
-        </div>
-      </div>
-      <div class="taskScore verbalBackground">
-        <img src="./assets/images/icon-verbal.svg" alt="Chat bubble icon">
-        <div class="verbalColor">
-          Verbal
-        </div>
-        <div>
-          61
-          <span>
-            / 100
-          </span>
-        </div>
-      </div>
-      <div class="taskScore visualBackground">
-        <img src="./assets/images/icon-visual.svg" alt="Eye icon">
-        <div class="visualColor">
-          Visual
-        </div>
-        <div>
-          72
-          <span>
-            / 100
-          </span>
+        <div class="taskScore visualBackground">
+          <img src="./assets/images/icon-visual.svg" alt="Eye icon">
+          <div class="visualColor">
+            Visual
+          </div>
+          <div>
+            72
+            <span>
+              / 100
+            </span>
+          </div>
         </div>
       </div>
       <form action="none" class="maxWidth">
