add container max width and center component

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <main>
-    <div class="total flexColumn marginTop">
+    <div class="total flexColumn marginTop maxWidth_container">
       <div>
         Your Result
       </div>
@@ -32,7 +32,7 @@
         You scored higher than 65% of the people who have taken these tests.
       </div>
     </div>
-    <div class="itemizedSummary flexColumn marginTop">
+    <div class="itemizedSummary flexColumn marginTop maxWidth_container">
       <div>
         Summary
       </div>
@@ -93,7 +93,7 @@
   </main>
 
   <footer>
-    <div class="attribution">
+    <div class="attribution maxWidth_container">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
     </div>
