set desktop screen total card styling
Adjust card padding, increase total score container size, pinch total score container
elements together.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Your Result
       </div>
       <div class="score flexColumn">
-        <div>
+        <div class="mediaMarginTop" style="height: 85px;">
           76
         </div>
         <div> of 100 </div>
