style itemized summary card
Adjust margin and padding of elements. Additionally increase size of header
elements.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body>
   <main>
     <div class="total flexColumn marginTop maxWidth_container">
-      <div>
+      <div class="heading-increase">
         Your Result
       </div>
       <div class="score flexColumn">
-        <div class="mediaMarginTop" style="height: 85px;">
+        <div class="total-media-marginTop" style="height: 85px;">
           76
         </div>
         <div> of 100 </div>
@@ -32,8 +32,8 @@
         You scored higher than 65% of the people who have taken these tests.
       </div>
     </div>
-    <div class="itemizedSummary flexColumn marginTop maxWidth_container">
-      <div>
+    <div class="itemizedSummary flexColumn marginTop summary-marginTop maxWidth_container new-summary-spacing">
+      <div class="heading-increase">
         Summary
       </div>
       <div class="maxWidth">
@@ -89,7 +89,7 @@
       <form action="none" class="maxWidth">
         <button>Continue</button>
       </form>
-      <footer>
+      <footer class="remove-margin">
         <div class="attribution maxWidth_container">
           Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
           Coded by <a href="#">Your Name Here</a>.
