--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <footer class="remove-margin">
         <div class="attribution maxWidth_container">
           Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-          Coded by <a href="#">Your Name Here</a>.
+          Coded by <a href="https://www.frontendmentor.io/profile/Ozzy-codes">Osvaldo M.</a>.
         </div>
       </footer>
     </div>
