add heading elements

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
   <main>
     <div class="total flexColumn marginTop maxWidth_container">
-      <div class="heading-increase">
+      <h1 class="heading-increase">
         Your Result
-      </div>
+      </h1>
       <div class="score flexColumn">
         <div class="total-media-marginTop" style="height: 85px;">
           76
@@ -33,9 +33,9 @@
       </div>
     </div>
     <div class="itemizedSummary flexColumn marginTop summary-marginTop maxWidth_container new-summary-spacing">
-      <div class="heading-increase">
+      <h2 class="heading-increase">
         Summary
-      </div>
+      </h2>
       <div class="maxWidth">
         <div class="taskScore reactionBackground">
           <img src="./assets/images/icon-reaction.svg" alt="Lightening icon">
