update id and class names

--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,8 @@
       <h2 class="heading-increase">
         Summary
       </h2>
-      <div id="summary_item" class="maxWidth">
-        <div class="taskScore reactionBackground">
+      <div id="summary_items" class="maxWidth">
+        <div class="taskScore backgroundReaction">
           <img src="./assets/images/icon-reaction.svg" alt="Lightening icon">
           <div class="reactionColor">
             Reaction
@@ -49,7 +49,7 @@
             </span>
           </div>
         </div>
-        <div class="taskScore memoryBackground">
+        <div class="taskScore backgroundMemory">
           <img src="./assets/images/icon-memory.svg" alt="Brain icon">
           <div class="memoryColor">
             Memory
@@ -61,7 +61,7 @@
             </span>
           </div>
         </div>
-        <div class="taskScore verbalBackground">
+        <div class="taskScore backgroundVerbal">
           <img src="./assets/images/icon-verbal.svg" alt="Chat bubble icon">
           <div class="verbalColor">
             Verbal
@@ -73,7 +73,7 @@
             </span>
           </div>
         </div>
-        <div class="taskScore visualBackground">
+        <div class="taskScore backgroundVisual">
           <img src="./assets/images/icon-visual.svg" alt="Eye icon">
           <div class="visualColor">
             Visual
