add IDs and query selectors

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
         Your Result
       </h1>
       <div class="score flexColumn">
-        <div class="total-media-marginTop" style="height: 85px;">
-          76
+        <div id="result_average" class="total-media-marginTop" style="height: 85px;">
+          ...
         </div>
         <div> of 100 </div>
       </div>
@@ -39,7 +39,7 @@
       <div id="summary_items" class="maxWidth">
       </div>
       <form action="none" class="maxWidth">
-        <button>Continue</button>
+        <button id="continue_button">Continue</button>
       </form>
       <footer class="remove-margin">
         <div class="attribution maxWidth_container">
