add additional utility classes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <main>
     <div class="total flexColumn marginTop maxWidth_container">
-      <h1 class="heading-increase">
+      <h1 class="heading-increase font-base weight-base">
         Your Result
       </h1>
       <div class="score flexColumn">
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="itemizedSummary flexColumn marginTop summary-marginTop maxWidth_container new-summary-spacing">
-      <h2 class="heading-increase">
+      <h2 class="heading-increase font-base weight-base">
         Summary
       </h2>
       <div class="maxWidth">
